--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,8 @@
-global:
-  scrape_interval: 15s
+﻿global:
+  scrape_interval: 15s
+
+scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
 
-scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
